- Gradle 7 support and solved warnings - Support of mavenCentral - Dependency support - Duplicate strategy for jar support - Script support - OpenAPI support for multiple files - Quarkus template support for index.html - Renamed service.properties - Change dockerJavaOptions - Detect ansi support improved - Changed to MaxMetaspaceSize - Added checkValidReleaseEnvironment - Bugfix logging